# Nexum-Graph

./: .gitignore  CONTRIBUTING.md  CORE_INVARIANTS.md  Cargo.toml  FUZZING.md  LICENSE  NEWS.md  Nexum_Graph_Whitepaper_v3.docx  Project_Codex_Final_Implementation_Spec.docx  README.md  RELEASING.md  SECURITY.md  action.yml  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  reusable-semantic-check.yml  semantic-check.yml
codex-skills/nexum-graph-maintainer/: SKILL.md
codex-skills/nexum-graph-maintainer/references/: maintenance-checklist.md  tooling-playbook.md
codex-skills/nexum-graph-sprint/: SKILL.md
codex-skills/nexum-graph-sprint/references/: tooling-playbook.md  workspace-map.md
crates/codex-cli/: Cargo.toml
crates/codex-cli/src/: cli.rs  coordination_pipeline.rs  eventlog_pipeline.rs  lib.rs  main.rs  output.rs  pipeline.rs  serve_pipeline.rs
crates/codex-cli/tests/: coordination_cli.rs  diff_pipeline.rs  eventlog_cli.rs  serve_cli.rs  validation_cli.rs
crates/codex-coord/: Cargo.toml
crates/codex-coord/src/: coordinator.rs  detector.rs  lib.rs  protocol.rs  service.rs
crates/codex-coord/tests/: conflict_detection.rs  coordination.rs  service.rs
crates/codex-core/: Cargo.toml
crates/codex-core/src/: conflict.rs  error.rs  lib.rs  validation.rs
crates/codex-eventlog/: Cargo.toml
crates/codex-eventlog/src/: event.rs  lib.rs  store.rs
crates/codex-eventlog/tests/: eventlog.rs
crates/codex-graph/: Cargo.toml
crates/codex-graph/src/: lib.rs
crates/codex-graph/tests/: code_graph.rs
crates/codex-lsp/: Cargo.toml
crates/codex-lsp/src/: backend.rs  config.rs  lib.rs  main.rs  protocol.rs
crates/codex-lsp/tests/: lsp_backend.rs
crates/codex-parse/: Cargo.toml
crates/codex-parse/src/: lib.rs
crates/codex-validate/: Cargo.toml
crates/codex-validate/src/: lib.rs  validator.rs
crates/codex-validate/tests/: validation.rs
crates/nex-cli/: Cargo.toml
crates/nex-cli/src/: audit_pipeline.rs  auth_pipeline.rs  check_pipeline.rs  cli.rs  coordination_pipeline.rs  demo_pipeline.rs  eventlog_pipeline.rs  github_pipeline.rs  lib.rs  main.rs  output.rs  serve_pipeline.rs  start_pipeline.rs
crates/nex-cli/tests/: audit_cli.rs  auth_cli.rs  check_cli.rs  coordination_cli.rs  coordination_crdt_cli.rs  demo_cli.rs  diff_pipeline.rs  eventlog_cli.rs  github_cli.rs  serve_cli.rs  start_cli.rs
crates/nex-coord/: Cargo.toml
crates/nex-coord/src/: coordinator.rs  crdt.rs  lib.rs  service.rs
crates/nex-coord/tests/: coordination_invariants.rs  crdt_persistence.rs  service.rs  service_crdt.rs
crates/nex-core/: Cargo.toml
crates/nex-core/src/: conflict.rs  lib.rs  persistence.rs  semantic.rs
crates/nex-core/tests/: conflict_risk.rs  persistence.rs
crates/nex-eventlog/: Cargo.toml
crates/nex-eventlog/src/: lib.rs  store.rs
crates/nex-eventlog/tests/: eventlog.rs
crates/nex-graph/: Cargo.toml
crates/nex-graph/src/: lib.rs
crates/nex-graph/tests/: diff_invariants.rs
crates/nex-lsp/src/: backend.rs
crates/nex-lsp/tests/: lsp_backend.rs
crates/nex-parse/: Cargo.toml
crates/nex-parse/src/: lib.rs  python.rs  rust.rs  typescript.rs
crates/nex-parse/tests/: extractor_contracts.rs
docs/: Nexum_Graph_Final_Implementation_Spec.md  Nexum_Graph_Whitepaper_v1.md  Nexum_Graph_Whitepaper_v3.md  github-rollout.md
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: config.ts  extension.ts  languageTargets.ts
extensions/vscode/test/: config.test.ts
fuzz/: Cargo.toml
fuzz/corpus/semantic_pipeline/: seed-python.txt  seed-rust.txt  seed-typescript.txt
fuzz/fuzz_targets/: graph_diff.rs  semantic_pipeline.rs
nex-skills/nexum-graph-launch-operator/: SKILL.md
nex-skills/nexum-graph-launch-operator/agents/: openai.yaml
nex-skills/nexum-graph-launch-operator/references/: public-state-playbook.md
nex-skills/nexum-graph-maintainer/: SKILL.md
nex-skills/nexum-graph-maintainer/agents/: openai.yaml
nex-skills/nexum-graph-maintainer/references/: maintenance-checklist.md  tooling-playbook.md
nex-skills/nexum-graph-sprint/: SKILL.md
nex-skills/nexum-graph-sprint/agents/: openai.yaml
nex-skills/nexum-graph-sprint/references/: tooling-playbook.md  workspace-map.md
packaging/: INSTALL.txt
prompts/: 003-codex-cli-diff-pipeline.md  004-codex-coord-conflict-detection.md  005-codex-coord-coordination-engine.md  006-codex-cli-coordination-pipeline.md  007-codex-validate-validation-engine.md
tools/: export_spec_markdown.py  github_release_watch.py  project_facts.py  release_tools.py  spec_query.py  sync_codex_skills.py  sync_nex_skills.py  test_action_contracts.py  test_github_release_watch.py  test_installers.py  test_project_facts.py  test_release_tools.py  test_repo_tools.py  test_skill_sync.py  tool_selftest.py  workspace_doctor.py
