[workspace]
members = [
    "crates/codex-core",
    "crates/codex-parse",
    "crates/codex-graph",
    "crates/codex-coord",
    "crates/codex-validate",
    "crates/codex-eventlog",
    "crates/codex-lsp",
    "crates/codex-cli",
]
default-members = ["crates/codex-cli"]
resolver = "2"

[workspace.dependencies]
# Parsing & CST
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.23"
rowan = "0.16"

# Graph
petgraph = "0.8"

# CRDT
loro = "1"

# Networking & Event Streaming
async-nats = "0.46"
tower-lsp = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Git
git2 = "0.20"

# Hashing
blake3 = "1"

# Error Handling
thiserror = "2"

# Logging
tracing = "0.1"

# Internal crates
codex-core = { path = "crates/codex-core" }
codex-parse = { path = "crates/codex-parse" }
codex-graph = { path = "crates/codex-graph" }
codex-coord = { path = "crates/codex-coord" }
codex-validate = { path = "crates/codex-validate" }
codex-eventlog = { path = "crates/codex-eventlog" }
