[package]
name = "codex-cli"
version = "0.1.0"
edition = "2024"
publish = false
description = "CLI binary for Project Codex (codex diff, codex check, codex serve)"

[lib]
name = "codex_cli"
path = "src/lib.rs"

[[bin]]
name = "codex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
chrono = { workspace = true }
codex-core = { workspace = true }
codex-parse = { workspace = true }
codex-graph = { workspace = true }
codex-coord = { workspace = true }
codex-validate = { workspace = true }
codex-eventlog = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.24"
