[package]
name = "codex-coord"
version = "0.1.0"
edition = "2024"
publish = false
description = "Intent declaration, semantic locking, coordination protocol"

[dependencies]
codex-core = { workspace = true }
codex-parse = { workspace = true }
codex-graph = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
