[package]
name = "codex-eventlog"
version = "0.1.0"
edition = "2024"
publish = false
description = "Event sourcing, semantic rollback, NATS JetStream integration"

[dependencies]
codex-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
