[package]
name = "codex-validate"
version = "0.1.0"
edition = "2024"
publish = false
description = "Pre-commit validation hooks and constraint checking"

[dependencies]
codex-core = { workspace = true }
codex-graph = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
